# simple-log

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
derive/src/: lib.rs
examples/: console.rs  file.rs  filter_module.rs  get_log_conf.rs  json_log.rs  json_log_out_kind.rs  new.rs  println.rs  quick.rs  target.rs  toml_log.rs  update_log_conf.rs  yaml_log.rs
simple-log-derive/: Cargo.toml
simple-log-derive/src/: lib.rs
src/: inner.rs  level.rs  lib.rs  macros.rs  out_kind.rs
