[workspace.package]
version = "1.7.0"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "A simple log. It's really simple use"
keywords = ["log", "simple-log", "logger", "log4j", "log4rs"]
readme = "README.md"
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/simple-log"
repository = "https://github.com/baoyachi/simple-log"
license = "MIT Or Apache-2.0"

[package]
name = "simple-log"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = { version = "1.1.1", default-features = false, features = ["all_components", "humantime", "serde", "serde-value", "yaml_format", "gzip"] }
once_cell = "1.15.0"
serde = { version = "1.0.145", features = ["derive"] }
is_debug = "1.0.1"
convert_case = "0.6.0"

[dependencies.simple-log-derive]
path = "simple-log-derive"
optional = true
version = "1.7.0"

[dev-dependencies]
serde_json = "1"
toml = "0.5.7"
serde_yaml = "0.9.13"

[workspace]
members = ["./", "simple-log-derive"]


[features]
target = ["simple-log-derive"]