[workspace.package]
version = "1.9.0"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "A simple log. It's really simple use"
keywords = ["log", "simple-log", "logger", "log4j", "log4rs"]
readme = "README.md"
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/simple-log"
repository = "https://github.com/baoyachi/simple-log"
license = "MIT OR Apache-2.0"

[package]
name = "simple-log"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = { version = "1.1.1", default-features = false, features = ["all_components", "humantime", "serde", "serde-value", "yaml_format", "gzip"], optional = true }
once_cell = { version = "1.15.0", default-features = false, optional = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }

[dependencies.simple-log-derive]
path = "derive"
optional = true
version = "1"

[dev-dependencies]
serde_json = "1"
toml = "0.8.19"
serde_yaml = "0.9.13"

[workspace]
members = ["./", "derive"]


[features]
default = ["log_inner"]
log_inner = ["log4rs", "once_cell"]
target = ["simple-log-derive"]

[[example]]
name = "target"
path = "examples/target.rs"
required-features = ["target"]
